# Animal-Crossing-Music-Bot

./: .gitignore  .replit  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  replit.nix  requirements.txt  run.py  utils.py
.github/workflows/: runner.yml
data/: weather.json
